--- a/.github/workflows/azure-lab.yml
+++ b/.github/workflows/azure-lab.yml
@@ -34,3 +34,11 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  
+  
+- name: Azure Login
+  uses: Azure/login@v1.4.4
+  with:
+    # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
+    creds: # optional
+    
