--- a/.github/workflows/azure-lab.yml
+++ b/.github/workflows/azure-lab.yml
@@ -40,5 +40,5 @@ jobs:
   uses: Azure/login@v1.4.4
   with:
     # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-    creds: # optional
+    creds: # ${{ secrets.AZURE_SPN_CREDENTIAL }}
     
