--- a/.github/workflows/azure-lab.yml
+++ b/.github/workflows/azure-lab.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: azure lab deploy
+name: azurelab-deploy
 
 # Controls when the workflow will run
 on:
