--- a/.github/workflows/azure-lab.yml
+++ b/.github/workflows/azure-lab.yml
@@ -23,11 +23,11 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      -  uses: actions/checkout@v3
 
-  name: Azure Login
-  uses: Azure/login@v1.4.4
-  with:
-    # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
-    creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
+      - name: Azure Login
+        uses: Azure/login@v1.4.4
+        with:
+           # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
+           creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
   
