deploy step added

--- a/.github/workflows/azure-lab.yml
+++ b/.github/workflows/azure-lab.yml
@@ -31,3 +31,7 @@ jobs:
            # Paste output of `az ad sp create-for-rbac` as value of secret variable: AZURE_CREDENTIALS
            creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
   
+      - name: az bicep deploy
+        working-directory: '{github.workspace}/src/bicep'
+        run: 
+             az deployment group create --resource-group simpleRG --template-file ./storage_account.bicep
