deploy step added

--- a/.github/workflows/azure-lab.yml
+++ b/.github/workflows/azure-lab.yml
@@ -32,6 +32,6 @@ jobs:
            creds: ${{ secrets.AZURE_SPN_CREDENTIAL }}
   
       - name: az bicep deploy
-        working-directory: '{github.workspace}/src/bicep'
+        working-directory: '${{github.workspace}}/src/bicep'
         run: 
              az deployment group create --resource-group simpleRG --template-file ./storage_account.bicep
